fix swiping on mobile

--- a/duthie-app/src/index.css
+++ b/duthie-app/src/index.css
@@ -1,4 +1,12 @@
-body {
+body, html {
+    margin: 0;
+    height: 100%;
+    min-height: 100%;
+    overflow: hidden;
+}
+
+#root {
+    height: 100%;
     margin: 0;
 }
 
@@ -7,18 +15,23 @@ body {
 }
 
 #container {
-    position: relative;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
 }
 
 #above {
-    margin-top: 20px;
     position: absolute;
-    z-index: 9;
+    z-index: 10;
     width: 100%;
+    height: 100%;
+    min-height: 100%;
+    display: inline-block;
+    pointer-events: none;
 }
 
 #below {
-    position: absolute;
+    opacity: 0.99;
     width: 100%;
     height: 100%;
     top: 0;
@@ -26,6 +39,44 @@ body {
     z-index: -1;
 }
 
+.top {
+    margin-top: 70px;
+}
+
+.bottom {
+    margin-bottom: 20px;
+}
+
+.test {
+    height: 100%;
+}
+
 .carousel-card {
     padding: 10px;
+}
+
+.header {
+    background-color: rgb(250, 249, 247);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.addPointerEvents {
+    pointer-events: auto;
+}
+
+.about {
+    margin-top: 70px;
+    padding: 20px;
+}
+
+.center {
+    margin: auto !important;
+    text-align: center;
+}
+
+.margin-bottom {
+    margin-bottom: 10px !important;
 }
